lustre/ptlrpc/sec.c
@@ -2108,8 +2108,18 @@ int sptlrpc_svc_alloc_rs(struct ptlrpc_request *req, int msglen)
 
         rc = policy->sp_sops->alloc_rs(req, msglen);
         if (unlikely(rc == -ENOMEM)) {
+		struct ptlrpc_service *src = req->rq_rqbd->rqbd_service;
+		if (src->srv_max_reply_size <
+		   msglen + sizeof(struct ptlrpc_reply_state)) {
+			/* Just return failure if the size is too big */
+			CERROR("size of message is too big (%zd), %d allowed",
+				msglen + sizeof(struct ptlrpc_reply_state),
+				src->srv_max_reply_size);
+			RETURN(-ENOMEM);
+		}
+
                 /* failed alloc, try emergency pool */
-                rs = lustre_get_emerg_rs(req->rq_rqbd->rqbd_service);
+		rs = lustre_get_emerg_rs(src);
                 if (rs == NULL)
                         RETURN(-ENOMEM);
 
